# lennys-polls-site

./: .gitignore  .vercelignore  index.html  package-lock.json
docs/: SKILL.md
pipeline/: .env.example  Dockerfile  pyproject.toml
pipeline/config/: surveys.yaml
pipeline/src/pipeline/: __main__.py  bot.py  cli.py  core.py  github.py  ingest.py  models.py  polly.py  publish.py  qual.py  quant.py  render.py  slack.py  social.py
pipeline/templates/: dashboard.html.j2  index_card.html.j2  social.html.j2
pipeline/templates/css/: dashboard.css  social.css
polls/: how-do-you-feel-about-your-job-social.html  how-do-you-feel-about-your-job.html
polls/drafts/: how-has-ai-changed-how-you-feel-about-your-job-social.html  how-has-ai-changed-how-you-feel-about-your-job.html
